--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_transaction_list">Transactions</string>
     <string name="title_transaction_detail">Transaction Detail</string>
+    <string name="title_category_list">categories</string>
+    <string name="title_category_detail">category Detail</string>
 </resources>
